fix example to get stable

--- a/example/nginx-site.conf
+++ b/example/nginx-site.conf
@@ -1,10 +1,10 @@
 # vim: ft=nginx
 upstream auth_adapter {
-  server 127.0.0.1:9292 fail_timeout=0;
+  server 127.0.0.1:18081 fail_timeout=0;
 }
 
 upstream app {
-  server 127.0.0.1:9293 fail_timeout=0;
+  server 127.0.0.1:18082 fail_timeout=0;
 }
 
 server {
@@ -13,7 +13,7 @@ server {
 
   location / {
     proxy_pass http://auth_adapter;
-    proxy_set_header Host $host;
+    proxy_set_header Host $http_host;
   }
 }
 
@@ -44,7 +44,7 @@ server {
 
     proxy_pass_request_body off;
     proxy_set_header Content-Length "";
-    proxy_set_header Host $host;
+    proxy_set_header Host $http_host;
 
     proxy_pass http://auth_adapter/test;
   }
@@ -54,9 +54,9 @@ server {
     internal;
     proxy_pass_request_body off;
     proxy_set_header Content-Length "";
-    proxy_set_header Host $host;
-    proxy_set_header x-ngx-oauth-initiate-back-to http://$host$request_uri;
-    proxy_set_header x-ngx-oauth-initiate-callback http://$host/_auth/callback;
+    proxy_set_header Host $http_host;
+    proxy_set_header x-ngx-oauth-initiate-back-to http://$http_host$request_uri;
+    proxy_set_header x-ngx-oauth-initiate-callback http://$http_host/_auth/callback;
     proxy_pass http://auth_adapter/initiate;
   }
 
@@ -64,7 +64,7 @@ server {
   location = /_auth/callback {
     auth_request off;
 
-    proxy_set_header Host $host;
+    proxy_set_header Host $http_host;
 
     proxy_pass http://auth_adapter/callback;
   }
