--- a/example/nginx-site.conf
+++ b/example/nginx-site.conf
@@ -1,12 +1,9 @@
 # vim: ft=nginx
+
+# nginx_omniauth_adapter app
 upstream auth_adapter {
   server 127.0.0.1:18081 fail_timeout=0;
 }
-
-upstream app {
-  server 127.0.0.1:18082 fail_timeout=0;
-}
-
 server {
   listen 127.0.0.1:18080;
   server_name ngx-auth.127.0.0.1.xip.io;
@@ -17,10 +14,15 @@ server {
   }
 }
 
+# server where you want to restrict access
+upstream app {
+  server 127.0.0.1:18082 fail_timeout=0;
+}
 server {
   listen 127.0.0.1:18080;
   server_name ngx-auth-test.127.0.0.1.xip.io;
 
+  # Restricted area
   location / {
     auth_request /_auth/challenge;
     # Trick - do internal redirection when auth_request says "need auth". 
@@ -38,7 +40,7 @@ server {
     proxy_pass http://app;
   }
 
-  # Internal endpoint: test still session is valid (adapter: GET /test)
+  # STEP 1, Internal endpoint: test still session is valid (adapter: GET /test)
   location = /_auth/challenge {
     internal;
 
@@ -49,7 +51,7 @@ server {
     proxy_pass http://auth_adapter/test;
   }
 
-  # Internal endpoint: Initiate authentication. Will redirect to adapter for omniauth sequence. (adapter: GET /initiate)
+  # STEP 2, Internal endpoint: Initiate authentication. Will redirect to adapter for omniauth sequence. (adapter: GET /initiate)
   location = /_auth/initiate {
     internal;
     proxy_pass_request_body off;
@@ -60,7 +62,7 @@ server {
     proxy_pass http://auth_adapter/initiate;
   }
 
-  # adapter will back here when authentication succeeded. proxy_pass to adapter to set session cookie.
+  # STEP 3, adapter will back here when authentication succeeded. proxy_pass to adapter to set session cookie.
   location = /_auth/callback {
     auth_request off;
 
