x-ngx-oauth-* -> x-ngx-omniauth-*
Forgot to rename :/

--- a/example/nginx-site.conf
+++ b/example/nginx-site.conf
@@ -29,12 +29,12 @@ server {
     error_page 401 = /_auth/initiate;
 
     # Receive user info from adapter
-    auth_request_set $ngx_oauth_provider $upstream_http_x_ngx_oauth_provider;
-    auth_request_set $ngx_oauth_user $upstream_http_x_ngx_oauth_user;
-    auth_request_set $ngx_oauth_info $upstream_http_x_ngx_oauth_info;
-    proxy_set_header x-ngx-oauth-provider $ngx_oauth_provider;
-    proxy_set_header x-ngx-oauth-user $ngx_oauth_user;
-    proxy_set_header x-ngx-oauth-info $ngx_oauth_info;
+    auth_request_set $ngx_oauth_provider $upstream_http_x_ngx_omniauth_provider;
+    auth_request_set $ngx_oauth_user $upstream_http_x_ngx_omniauth_user;
+    auth_request_set $ngx_oauth_info $upstream_http_x_ngx_omniauth_info;
+    proxy_set_header x-ngx-omniauth-provider $ngx_oauth_provider;
+    proxy_set_header x-ngx-omniauth-user $ngx_oauth_user;
+    proxy_set_header x-ngx-omniauth-info $ngx_oauth_info;
 
     # pass to backend application as usual as you do.
     proxy_pass http://app;
@@ -57,8 +57,8 @@ server {
     proxy_pass_request_body off;
     proxy_set_header Content-Length "";
     proxy_set_header Host $http_host;
-    proxy_set_header x-ngx-oauth-initiate-back-to http://$http_host$request_uri;
-    proxy_set_header x-ngx-oauth-initiate-callback http://$http_host/_auth/callback;
+    proxy_set_header x-ngx-omniauth-initiate-back-to http://$http_host$request_uri;
+    proxy_set_header x-ngx-omniauth-initiate-callback http://$http_host/_auth/callback;
     proxy_pass http://auth_adapter/initiate;
   }
 
