forgot to rename :/ (2)

--- a/example/nginx-site.conf
+++ b/example/nginx-site.conf
@@ -29,12 +29,12 @@ server {
     error_page 401 = /_auth/initiate;
 
     # Receive user info from adapter
-    auth_request_set $ngx_oauth_provider $upstream_http_x_ngx_omniauth_provider;
-    auth_request_set $ngx_oauth_user $upstream_http_x_ngx_omniauth_user;
-    auth_request_set $ngx_oauth_info $upstream_http_x_ngx_omniauth_info;
-    proxy_set_header x-ngx-omniauth-provider $ngx_oauth_provider;
-    proxy_set_header x-ngx-omniauth-user $ngx_oauth_user;
-    proxy_set_header x-ngx-omniauth-info $ngx_oauth_info;
+    auth_request_set $ngx_omniauth_provider $upstream_http_x_ngx_omniauth_provider;
+    auth_request_set $ngx_omniauth_user $upstream_http_x_ngx_omniauth_user;
+    auth_request_set $ngx_omniauth_info $upstream_http_x_ngx_omniauth_info;
+    proxy_set_header x-ngx-omniauth-provider $ngx_omniauth_provider;
+    proxy_set_header x-ngx-omniauth-user $ngx_omniauth_user;
+    proxy_set_header x-ngx-omniauth-info $ngx_omniauth_info;
 
     # pass to backend application as usual as you do.
     proxy_pass http://app;
