proxy_intercept_errors must be turned off
to avoid initiating authentication when proxied application has
returned 401

--- a/example/nginx-site.conf
+++ b/example/nginx-site.conf
@@ -26,6 +26,7 @@ server {
   location / {
     auth_request /_auth/challenge;
     # Trick - do internal redirection when auth_request says "need auth". 
+    proxy_intercept_errors off;
     error_page 401 = /_auth/initiate;
 
     # Receive user info from adapter
