fix for circleci
ubuntu system nginx attempts to open /var/log/nginx/* and /run/nginx.pid

--- a/example/nginx.conf
+++ b/example/nginx.conf
@@ -1,6 +1,7 @@
 # vim: ft=nginx
 worker_processes 1;
 daemon off;
+pid /tmp/nginx_omniauth_adapter-nginx.pid;
 
 error_log stderr;
 
@@ -12,6 +13,8 @@ http {
   default_type  application/octet-stream;
 
   server_names_hash_bucket_size 128;
+
+  access_log off;
 
   include nginx-site.conf;
 }
