circleci: Cache docker parent image

--- a/circle.yml
+++ b/circle.yml
@@ -7,12 +7,18 @@ machine:
 dependencies:
   cache_directories:
     - bin
+    - ~/docker
   pre:
     - sudo apt-get install nginx
     - if [ ! -d bin ]; then mkdir bin; fi
     - if [ ! -x bin/git-set-mtime ]; then curl -o bin/git-set-mtime https://drone.io/github.com/rosylilly/git-set-mtime/files/artifacts/bin/linux_amd64/git-set-mtime && chmod +x bin/git-set-mtime; fi
     - docker login -u "${DOCKER_USER}" -p "${DOCKER_PASSWORD}" -e "${DOCKER_EMAIL}" https://quay.io
     - bin/git-set-mtime
+    - mkdir -p ~/docker
+    - if [[ -e ~/docker/cache.tar ]]; then docker load -i ~/docker/cache.tar; fi
+    - docker pull quay.io/sorah/rbenv:2.2
+    - BASE_ID="$(docker inspect -f '{{.Id}}' quay.io/sorah/rbenv:2.2)"; if [[ "_${BASE_ID}" != "_$(cat ~/docker/cache.id)" ]]; then docker save quay.io/sorah/rbenv:2.2 > ~/docker/cache.tar && echo "${BASE_ID}" > ~/docker/cache.id; fi
+    - docker pull quay.io/sorah/nginx_omniauth_adapter:latest
     - docker build -t quay.io/sorah/nginx_omniauth_adapter:${CIRCLE_SHA1} .
 
 test:
