--- a/circle.yml
+++ b/circle.yml
@@ -9,7 +9,7 @@ dependencies:
     - bin
     - ~/docker
   pre:
-    - sudo apt-get update && sudo apt-get install nginx
+    - sudo add-apt-repository ppa:nginx/development && sudo apt-get update && sudo apt-get install nginx
     - if [ ! -d bin ]; then mkdir bin; fi
     - if [ ! -x bin/git-set-mtime ]; then curl -o bin/git-set-mtime https://drone.io/github.com/rosylilly/git-set-mtime/files/artifacts/bin/linux_amd64/git-set-mtime && chmod +x bin/git-set-mtime; fi
     - docker login -u "${DOCKER_USER}" -p "${DOCKER_PASSWORD}" -e "${DOCKER_EMAIL}" https://quay.io
