Replace xip.io with nip.io
nip.io seems to be a good replacement of xip.io, which is out of
service.

--- a/example/nginx-site.conf
+++ b/example/nginx-site.conf
@@ -6,7 +6,7 @@ upstream auth_adapter {
 }
 server {
   listen 127.0.0.1:18080;
-  server_name ngx-auth.127.0.0.1.xip.io;
+  server_name ngx-auth.127.0.0.1.nip.io;
 
   location / {
     proxy_pass http://auth_adapter;
@@ -20,7 +20,7 @@ upstream app {
 }
 server {
   listen 127.0.0.1:18080;
-  server_name ngx-auth-test.127.0.0.1.xip.io;
+  server_name ngx-auth-test.127.0.0.1.nip.io;
 
   # Restricted area
   location / {
